--- a/app/assets/javascripts/templates/todos.hbs
+++ b/app/assets/javascripts/templates/todos.hbs
@@ -47,6 +47,8 @@
     Created by
     <a href="http://github.com/tomdale">Tom Dale</a>,
     <a href="http://github.com/addyosmani">Addy Osmani</a>
+    Updated by
+    <a href="http://github.com/barberj">Justin Barber</a>
   </p>
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
